--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "astro": "^4.1.1",
-    "astro-icon": "1.1.1"
+    "astro-icon": "1.1.1",
+    "dialog-polyfill": "0.5.6"
   },
   "devDependencies": {
     "@astrojs/check": "0.9.3",
