--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.0.0",
+    "astro": "5.2.5",
     "astro-icon": "1.1.5",
     "dialog-polyfill": "0.5.6"
   },
