--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "dialog-polyfill": "0.5.6"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "4.0.5",
     "@astrojs/check": "0.9.4",
     "@astrojs/sitemap": "3.2.1",
-    "@astrojs/tailwind": "6.0.0",
     "@astrojs/ts-plugin": "1.10.4",
     "@percy/cli": "1.30.8",
     "@rollup/plugin-yaml": "4.1.2",
