chore(percy): ignore 2024 disclaimer

--- a/.percy.yml
+++ b/.percy.yml
@@ -12,7 +12,8 @@ snapshot:
   cliEnableJavaScript: true
   disableShadowDOM: false
   percy-css: |
-    #toast { 
+    #toast,
+    #team-ux-in-2024-disclaimer { 
       display: none; 
     }
 discovery:
