--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "astro": "5.3.0",
     "astro-icon": "1.1.5",
-    "dialog-polyfill": "0.5.6"
+    "dialog-polyfill": "0.5.6",
+    "tailwindcss": "4.0.7"
   },
   "devDependencies": {
     "@tailwindcss/vite": "4.0.7",
@@ -29,7 +30,6 @@
     "prettier": "3.5.1",
     "prettier-plugin-astro": "0.14.1",
     "sharp": "0.33.5",
-    "tailwindcss": "4.0.7",
     "typescript": "5.7.3"
   }
 }
