--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@rollup/plugin-yaml": "4.1.2",
     "@tailwindcss/vite": "4.1.1",
     "cssnano": "7.0.6",
+    "fast-xml-parser": "5.1.0",
     "postcss": "8.5.3",
     "prettier": "3.5.3",
     "prettier-plugin-astro": "0.14.1",
