chore(percy): script to generate snapshots

--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install corepack
         shell: "bash"
         run: npm install -g corepack@latest
-        
+
       - name: Setup PNPM using corepack
         shell: "bash"
         run: |
@@ -37,7 +37,12 @@ jobs:
         shell: "bash"
         run: pnpm build
 
-      - name: Take team-ux.com screenshots and upload them to Percy
-        run: pnpm percy snapshot dist/
+      - name: Start website preview server for visual testing
+        run: pnpm preview --port $ASTRO_PREVIEW_SERVER_PORT_FOR_VISUAL_TESTING &
+
+      - name: Take website screenshots and upload them to Percy
+        run: |
+          pnpm wait-on tcp:$ASTRO_PREVIEW_SERVER_PORT_FOR_VISUAL_TESTING 
+          pnpm percy snapshot .percy.mjs --verbose
         env:
           PERCY_TOKEN: ${{ secrets.PERCY_TOKEN }}
