--- a/.percy.yml
+++ b/.percy.yml
@@ -1,19 +1,13 @@
 version: 2
 snapshot:
-  widths:
-    - 640
-    - 768
-    - 1024
-    - 1280
-    - 1512
-  minHeight: 1024
-  enableJavaScript: true
-  cliEnableJavaScript: true
-  disableShadowDOM: false
   percy-css: |
     #toast,
     #team-ux-in-2024-disclaimer { 
       display: none; 
+    }
+    
+    .project-image-link img {
+      opacity: 1 !important;
     }
 discovery:
   allowedHostnames: []
