--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "3.5.3",
     "prettier-plugin-astro": "0.14.1",
     "sharp": "0.33.5",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "wait-on": "8.0.3"
   }
 }
