--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -2,11 +2,11 @@ name: Run visual testing
 
 on:
   pull_request:
-    types: [ opened, synchronize, reopened ]
+    types: [opened, synchronize, reopened, labeled]
 
 env:
   ASTRO_PREVIEW_SERVER_PORT_FOR_VISUAL_TESTING: 4321
-  
+
 jobs:
   visual-testing:
     if: ${{ contains(github.event.pull_request.labels.*.name, 'visual-testing') || startsWith(github.head_ref, 'renovate/') }}
