--- a/.github/workflows/visual-testing.yml
+++ b/.github/workflows/visual-testing.yml
@@ -3,13 +3,10 @@ name: Run visual testing
 on:
   pull_request:
     types: [opened, synchronize, reopened, labeled]
-  push:
-    branches:
-      - main
 
 jobs:
   visual-testing:
-    if: ${{ github.event_name == 'push' || (github.event_name == 'pull_request' && (contains(github.event.pull_request.labels.*.name, 'visual-testing') || startsWith(github.head_ref, 'renovate/'))) }}
+    if: ${{ github.event_name == 'pull_request' && (contains(github.event.pull_request.labels.*.name, 'visual-testing') || startsWith(github.head_ref, 'renovate/')) }}
     runs-on: ubuntu-latest
 
     steps:
