--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "prettier": "3.6.2",
     "prettier-plugin-astro": "0.14.1",
     "sharp": "0.34.4",
-    "typescript": "5.9.3",
-    "wait-on": "8.0.5"
+    "typescript": "5.9.3"
   }
 }
